// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Survey Search - Job Result should not show Load More link when there are no more data cuts results 1`] = `
<pf-job-result
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  refineInPeerClicked={[Function EventEmitter]}
  refineLinkEnabled="false"
  selectedCuts$={[Function Store]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  store={[Function Store]}
  surveySearchResultDataSources={[Function Object]}
  toggleDataCutsLabel={[Function String]}
  toggleRefineInPeerLabel={[Function String]}
>
  <div
    class="result job-result-row"
    data-qa-id="cnt-DataSource-Surveys"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
      
      <div
        class="matches"
      >
         5 
      </div>
    </div>
    <div
      class="vendor"
    >
      
      
      
       Hewitt Associates - TCM Executive Long Term Incentives Total Compensation by Industry (4/1/10) 
      
      
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link au-lnk-show-hide-data-cuts"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link au-lnk-show-hide-job-details"
      >
         Show Job Detail 
      </div>
      
    </div>
    
    
    <div>
      
      
      <pf-data-cuts />
      
      
    </div>
    
  </div>
</pf-job-result>
`;

exports[`Project - Survey Search - Job Result should show Load More link when there are more data cuts from server 1`] = `
<pf-job-result
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  refineInPeerClicked={[Function EventEmitter]}
  refineLinkEnabled="false"
  selectedCuts$={[Function Store]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  store={[Function Store]}
  surveySearchResultDataSources={[Function Object]}
  toggleDataCutsLabel={[Function String]}
  toggleRefineInPeerLabel={[Function String]}
>
  <div
    class="result job-result-row"
    data-qa-id="cnt-DataSource-Surveys"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
      
      <div
        class="matches"
      >
         5 
      </div>
    </div>
    <div
      class="vendor"
    >
      
      
      
       Hewitt Associates - TCM Executive Long Term Incentives Total Compensation by Industry (4/1/10) 
      
      
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link au-lnk-show-hide-data-cuts"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link au-lnk-show-hide-job-details"
      >
         Show Job Detail 
      </div>
      
    </div>
    
    
    <div>
      
      
      <pf-data-cuts />
      
      <span
        class="link"
      >
        Load More
      </span>
      
    </div>
    
  </div>
</pf-job-result>
`;

exports[`Project - Survey Search - Job Result should show error state if issue loading data cuts 1`] = `
<pf-job-result
  cutSelected={[Function EventEmitter]}
  hideCutsLabel={[Function String]}
  job={[Function Object]}
  loadDataCuts={[Function EventEmitter]}
  loadingResults$={[Function Store]}
  loadingResultsSub={[Function Subscriber]}
  matchesMouseEnter={[Function EventEmitter]}
  matchesMouseLeave={[Function EventEmitter]}
  matchesMouseLeaveTimeout={[Function Number]}
  refineInPeerClicked={[Function EventEmitter]}
  refineLinkEnabled="false"
  selectedCuts$={[Function Store]}
  showCutsLabel={[Function String]}
  showDataCuts={[Function Boolean]}
  store={[Function Store]}
  surveySearchResultDataSources={[Function Object]}
  toggleDataCutsLabel={[Function String]}
  toggleRefineInPeerLabel={[Function String]}
>
  <div
    class="result job-result-row"
    data-qa-id="cnt-DataSource-Surveys"
  >
    <div
      class="d-flex justify-content-between"
    >
      <div
        class="d-flex"
      >
        <div
          class="job-title"
        >
           Blend of Gas Operations Top Executive-Corporate, G 
        </div>
        <div
          class="job-code"
        >
           (13001) 
        </div>
      </div>
      
      <div
        class="matches"
      >
         5 
      </div>
    </div>
    <div
      class="vendor"
    >
      
      
      
       Hewitt Associates - TCM Executive Long Term Incentives Total Compensation by Industry (4/1/10) 
      
      
    </div>
    <div
      class="d-flex mt-2"
    >
      <div
        class="link au-lnk-show-hide-data-cuts"
      >
         Hide Cuts 
      </div>
      <div
        class="link mx-2"
      >
         | 
      </div>
      <div
        class="link au-lnk-show-hide-job-details"
      >
         Show Job Detail 
      </div>
      
    </div>
    
    
    <div>
      
      <div
        class="loading-datacuts-error"
      >
        <fa-icon
          class="icon"
          icon="exclamation-triangle"
        />
         Error loading data cuts. Please try again later. 
      </div>
    </div>
    
  </div>
</pf-job-result>
`;
